--- a/app/src/main/res/layout/a_task_list.xml
+++ b/app/src/main/res/layout/a_task_list.xml
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
+        android:text="-"
         tools:text="23 Mar - 25 - Mar" />
 
     <android.support.v7.widget.RecyclerView
