--- a/app/src/main/res/layout/a_task_list.xml
+++ b/app/src/main/res/layout/a_task_list.xml
@@ -7,6 +7,8 @@
 
     <TextView
         android:id="@+id/week_diapason"
+        style="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/light_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -15,8 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        android:text="-"
-        tools:text="23 Mar - 25 - Mar" />
+        tools:text="23 Mar - 25 Mar" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/time_entry_list"
