--- a/app/src/main/res/layout/a_week_pager.xml
+++ b/app/src/main/res/layout/a_week_pager.xml
@@ -19,9 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
         android:orientation="vertical">
 
 
@@ -29,6 +26,7 @@
             android:id="@+id/search_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="8dp"
 
             app:fabSize="mini"
@@ -41,6 +39,9 @@
             android:layout_gravity="bottom|end"
 
             app:fabSize="normal"
-            app:srcCompat="@drawable/ic_add" />
+            app:srcCompat="@drawable/ic_add"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp" />
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
