--- a/app/src/main/res/layout/i_spinner_task.xml
+++ b/app/src/main/res/layout/i_spinner_task.xml
@@ -9,11 +9,12 @@
 
     <TextView
         android:id="@+id/task_name"
+        style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         tools:text="Task name"
         app:layout_constraintBottom_toBottomOf="parent"
