--- a/app/src/main/res/layout/i_task.xml
+++ b/app/src/main/res/layout/i_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
+    android:background="?android:attr/selectableItemBackground"
     tools:showIn="@layout/a_task_list">
 
     <TextView
@@ -29,11 +29,27 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/i_tags"
         app:layout_constraintEnd_toStartOf="@id/i_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/i_task"
         tools:text="Description" />
+
+    <TextView
+        android:id="@+id/i_tags"
+        style="@style/TextAppearance.AppCompat.Caption"
+        android:textColor="@color/light_gray"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/i_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/i_description"
+        tools:text="Tag1, Tag2" />
 
     <TextView
         android:id="@+id/i_time"
