load entries by asc date add day name in item adapter

--- a/app/src/main/res/layout/i_task.xml
+++ b/app/src/main/res/layout/i_task.xml
@@ -38,30 +38,18 @@
     <TextView
         android:id="@+id/i_tags"
         style="@style/TextAppearance.AppCompat.Caption"
-        android:textColor="@color/light_gray"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
+        android:textColor="@color/light_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/i_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/i_description"
         tools:text="Tag1, Tag2" />
-
-    <TextView
-        android:id="@+id/i_time"
-        style="@style/TextAppearance.AppCompat.Caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/i_sync"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="2h 04m" />
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/i_sync"
@@ -72,4 +60,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_sync" />
+
+    <TextView
+        android:id="@+id/i_time"
+        style="@style/TextAppearance.AppCompat.Caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/i_letter"
+        app:layout_constraintEnd_toStartOf="@id/i_sync"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="2h 04m" />
+
+
+    <TextView
+        android:id="@+id/i_letter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/i_time"
+        app:layout_constraintStart_toStartOf="@id/i_time"
+        app:layout_constraintTop_toBottomOf="@id/i_time"
+        tools:text="M" />
+
 </android.support.constraint.ConstraintLayout>
