--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="light_gray">#A0A0A0</color>
     <color name="progress_background">#AfA0A0A0</color>
+    <color name="white">#ffffff</color>
 </resources>
