--- a/app/src/main/res/layout/i_header.xml
+++ b/app/src/main/res/layout/i_header.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#F5F5F5"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
-
     <TextView
         android:id="@+id/week_diapason"
         style="@style/TextAppearance.AppCompat.Body1"
@@ -12,7 +13,14 @@
         android:layout_gravity="center"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textColor="@color/light_gray"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:textStyle="bold"
+        android:textColor="#636363"
         tools:text="23 Mar - 25 Mar" />
-</FrameLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#F2F2F2" />
+</LinearLayout>
