--- a/app/src/main/res/layout/a_search.xml
+++ b/app/src/main/res/layout/a_search.xml
@@ -55,6 +55,7 @@
 
         <EditText
             android:id="@+id/search_to"
+            android:hint="@string/to"
             style="@style/Lori.ClickableEditView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Search"
+        android:text="@string/search"
         app:layout_constraintBottom_toBottomOf="@id/search_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/search_layout" />
